--- a/my-dapp/frontend/package.json
+++ b/my-dapp/frontend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.7",
     "ethers": "^6.15.0",
     "next": "^15.3.5",
     "react": "^19.1.0",
