--- a/my-dapp/frontend/package.json
+++ b/my-dapp/frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.7",
     "ethers": "^6.15.0",
     "next": "^15.3.5",
+    "openai": "^5.9.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
