--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,46 @@
+# Node modules
 node_modules/
+
+# Next.js build output
 .next/
+out/
+
+# Local environment variables
+.env
+.env.*.local
 .env.local
-artifacts/
-cache/
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+logs/
+
+# Dependency directories
+.pnp/
+.pnp.js
+
+# Editor configs
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
+
+# OS-generated files
+*.swp
+*.swo
+
+# Hardhat / Foundry / Solidity build artifacts
+my-app/blockchain/artifacts/
+my-app/blockchain/cache/
+
+# Coverage reports
+coverage/
+
+# Temporary files
+*.tmp
+*.temp
+
+# Mac system files
+.DS_Store
