--- a/my-dapp/blockchain/package.json
+++ b/my-dapp/blockchain/package.json
@@ -13,5 +13,8 @@
     "@nomicfoundation/hardhat-toolbox": "^6.0.0",
     "dotenv": "^17.2.0",
     "hardhat": "^2.25.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0"
   }
 }
